APIs/apicurio.local/registry/1.3.2.Final/java-client/README.md
# openapi-java-client

Apicurio Registry API
- API version: 1.3.2.Final
  - Build date: 2024-10-12T11:29:24.995608-04:00[America/New_York]
  - Generator version: 7.9.0

Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers (schema and file descriptor)
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Note**: The Apicurio Registry REST API is available from `http://MY-REGISTRY-URL/api`. You must prefix all API operation paths with `/api`, for example, `api/ids/{globalId}`.


  For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>1.3.2.Final</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:1.3.2.Final"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-1.3.2.Final.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ArtifactRulesApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://apicurio.local");

    ArtifactRulesApi apiInstance = new ArtifactRulesApi(defaultClient);
    String artifactId = "artifactId_example"; // String | The artifact ID.  Can be a string (client-provided) or integer (server-generated) representing the unique artifact identifier.
    Rule rule = new Rule(); // Rule | 
    try {
      apiInstance.createArtifactRule(artifactId, rule);
    } catch (ApiException e) {
      System.err.println("Exception when calling ArtifactRulesApi#createArtifactRule");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ArtifactRulesApi* | [**createArtifactRule**](docs/ArtifactRulesApi.md#createArtifactRule) | **POST** /artifacts/{artifactId}/rules | Create artifact rule
*ArtifactRulesApi* | [**deleteArtifactRule**](docs/ArtifactRulesApi.md#deleteArtifactRule) | **DELETE** /artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ArtifactRulesApi* | [**deleteArtifactRules**](docs/ArtifactRulesApi.md#deleteArtifactRules) | **DELETE** /artifacts/{artifactId}/rules | Delete artifact rules
*ArtifactRulesApi* | [**getArtifactRuleConfig**](docs/ArtifactRulesApi.md#getArtifactRuleConfig) | **GET** /artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ArtifactRulesApi* | [**listArtifactRules**](docs/ArtifactRulesApi.md#listArtifactRules) | **GET** /artifacts/{artifactId}/rules | List artifact rules
*ArtifactRulesApi* | [**testUpdateArtifact**](docs/ArtifactRulesApi.md#testUpdateArtifact) | **PUT** /artifacts/{artifactId}/test | Test update artifact
*ArtifactRulesApi* | [**updateArtifactRuleConfig**](docs/ArtifactRulesApi.md#updateArtifactRuleConfig) | **PUT** /artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ArtifactsApi* | [**createArtifact**](docs/ArtifactsApi.md#createArtifact) | **POST** /artifacts | Create artifact
*ArtifactsApi* | [**deleteArtifact**](docs/ArtifactsApi.md#deleteArtifact) | **DELETE** /artifacts/{artifactId} | Delete artifact
*ArtifactsApi* | [**getArtifactByGlobalId**](docs/ArtifactsApi.md#getArtifactByGlobalId) | **GET** /ids/{globalId} | Get artifact by global ID
*ArtifactsApi* | [**getLatestArtifact**](docs/ArtifactsApi.md#getLatestArtifact) | **GET** /artifacts/{artifactId} | Get latest artifact
*ArtifactsApi* | [**listArtifacts**](docs/ArtifactsApi.md#listArtifacts) | **GET** /artifacts | List all artifact IDs
*ArtifactsApi* | [**searchArtifacts_0**](docs/ArtifactsApi.md#searchArtifacts_0) | **GET** /search/artifacts | Search for artifacts
*ArtifactsApi* | [**updateArtifact**](docs/ArtifactsApi.md#updateArtifact) | **PUT** /artifacts/{artifactId} | Update artifact
*ArtifactsApi* | [**updateArtifactState**](docs/ArtifactsApi.md#updateArtifactState) | **PUT** /artifacts/{artifactId}/state | Update artifact state
*GlobalRulesApi* | [**createGlobalRule**](docs/GlobalRulesApi.md#createGlobalRule) | **POST** /rules | Create global rule
*GlobalRulesApi* | [**deleteAllGlobalRules**](docs/GlobalRulesApi.md#deleteAllGlobalRules) | **DELETE** /rules | Delete all global rules
*GlobalRulesApi* | [**deleteGlobalRule**](docs/GlobalRulesApi.md#deleteGlobalRule) | **DELETE** /rules/{rule} | Delete global rule
*GlobalRulesApi* | [**getGlobalRuleConfig**](docs/GlobalRulesApi.md#getGlobalRuleConfig) | **GET** /rules/{rule} | Get global rule configuration
*GlobalRulesApi* | [**listGlobalRules**](docs/GlobalRulesApi.md#listGlobalRules) | **GET** /rules | List global rules
*GlobalRulesApi* | [**updateGlobalRuleConfig**](docs/GlobalRulesApi.md#updateGlobalRuleConfig) | **PUT** /rules/{rule} | Update global rule configuration
*MetadataApi* | [**deleteArtifactVersionMetaData**](docs/MetadataApi.md#deleteArtifactVersionMetaData) | **DELETE** /artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*MetadataApi* | [**getArtifactMetaData**](docs/MetadataApi.md#getArtifactMetaData) | **GET** /artifacts/{artifactId}/meta | Get artifact metadata
*MetadataApi* | [**getArtifactMetaDataByContent**](docs/MetadataApi.md#getArtifactMetaDataByContent) | **POST** /artifacts/{artifactId}/meta | Get artifact metadata by content
*MetadataApi* | [**getArtifactMetaDataByGlobalId**](docs/MetadataApi.md#getArtifactMetaDataByGlobalId) | **GET** /ids/{globalId}/meta | Get global artifact metadata
*MetadataApi* | [**getArtifactVersionMetaData**](docs/MetadataApi.md#getArtifactVersionMetaData) | **GET** /artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*MetadataApi* | [**updateArtifactMetaData**](docs/MetadataApi.md#updateArtifactMetaData) | **PUT** /artifacts/{artifactId}/meta | Update artifact metadata
*MetadataApi* | [**updateArtifactVersionMetaData**](docs/MetadataApi.md#updateArtifactVersionMetaData) | **PUT** /artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*SearchApi* | [**searchArtifacts**](docs/SearchApi.md#searchArtifacts) | **GET** /search/artifacts | Search for artifacts
*SearchApi* | [**searchVersions**](docs/SearchApi.md#searchVersions) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*VersionsApi* | [**createArtifactVersion**](docs/VersionsApi.md#createArtifactVersion) | **POST** /artifacts/{artifactId}/versions | Create artifact version
*VersionsApi* | [**getArtifactVersion**](docs/VersionsApi.md#getArtifactVersion) | **GET** /artifacts/{artifactId}/versions/{version} | Get artifact version
*VersionsApi* | [**listArtifactVersions**](docs/VersionsApi.md#listArtifactVersions) | **GET** /artifacts/{artifactId}/versions | List artifact versions
*VersionsApi* | [**searchVersions_0**](docs/VersionsApi.md#searchVersions_0) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*VersionsApi* | [**updateArtifactVersionState**](docs/VersionsApi.md#updateArtifactVersionState) | **PUT** /artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation for Models

 - [ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ArtifactState](docs/ArtifactState.md)
 - [ArtifactType](docs/ArtifactType.md)
 - [EditableMetaData](docs/EditableMetaData.md)
 - [Error](docs/Error.md)
 - [Rule](docs/Rule.md)
 - [RuleType](docs/RuleType.md)
 - [SearchOver](docs/SearchOver.md)
 - [SearchedArtifact](docs/SearchedArtifact.md)
 - [SearchedVersion](docs/SearchedVersion.md)
 - [SortOrder](docs/SortOrder.md)
 - [UpdateState](docs/UpdateState.md)
 - [VersionMetaData](docs/VersionMetaData.md)
 - [VersionSearchResults](docs/VersionSearchResults.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization

Endpoints do not require authorization.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author

apicurio@lists.jboss.org

