APIs/apicurio.local/registry/2.4.x/java-client/README.md
# openapi-java-client

Apicurio Registry API [v2]
- API version: 2.4.x
  - Build date: 2024-10-12T11:29:28.619448-04:00[America/New_York]
  - Generator version: 7.9.0

Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Important**: The Apicurio Registry REST API is available from `https://MY-REGISTRY-URL/apis/registry/v2` by default. Therefore you must prefix all API operation paths with `../apis/registry/v2` in this case. For example: `../apis/registry/v2/ids/globalIds/{globalId}`.


  For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>2.4.x</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:2.4.x"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-2.4.x.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AdminApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://apicurio.local");

    AdminApi apiInstance = new AdminApi(defaultClient);
    Rule rule = new Rule(); // Rule | 
    try {
      apiInstance.createGlobalRule_0(rule);
    } catch (ApiException e) {
      System.err.println("Exception when calling AdminApi#createGlobalRule_0");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdminApi* | [**createGlobalRule_0**](docs/AdminApi.md#createGlobalRule_0) | **POST** /admin/rules | Create global rule
*AdminApi* | [**createRoleMapping**](docs/AdminApi.md#createRoleMapping) | **POST** /admin/roleMappings | Create a new role mapping
*AdminApi* | [**deleteAllGlobalRules_0**](docs/AdminApi.md#deleteAllGlobalRules_0) | **DELETE** /admin/rules | Delete all global rules
*AdminApi* | [**deleteGlobalRule_0**](docs/AdminApi.md#deleteGlobalRule_0) | **DELETE** /admin/rules/{rule} | Delete global rule
*AdminApi* | [**deleteRoleMapping**](docs/AdminApi.md#deleteRoleMapping) | **DELETE** /admin/roleMappings/{principalId} | Delete a role mapping
*AdminApi* | [**exportData**](docs/AdminApi.md#exportData) | **GET** /admin/export | Export registry data
*AdminApi* | [**getConfigProperty**](docs/AdminApi.md#getConfigProperty) | **GET** /admin/config/properties/{propertyName} | Get configuration property value
*AdminApi* | [**getGlobalRuleConfig_0**](docs/AdminApi.md#getGlobalRuleConfig_0) | **GET** /admin/rules/{rule} | Get global rule configuration
*AdminApi* | [**getLogConfiguration**](docs/AdminApi.md#getLogConfiguration) | **GET** /admin/loggers/{logger} | Get a single logger configuration
*AdminApi* | [**getRoleMapping**](docs/AdminApi.md#getRoleMapping) | **GET** /admin/roleMappings/{principalId} | Return a single role mapping
*AdminApi* | [**importData**](docs/AdminApi.md#importData) | **POST** /admin/import | Import registry data
*AdminApi* | [**listArtifactTypes_0**](docs/AdminApi.md#listArtifactTypes_0) | **GET** /admin/artifactTypes | List artifact types
*AdminApi* | [**listConfigProperties**](docs/AdminApi.md#listConfigProperties) | **GET** /admin/config/properties | List all configuration properties
*AdminApi* | [**listGlobalRules_0**](docs/AdminApi.md#listGlobalRules_0) | **GET** /admin/rules | List global rules
*AdminApi* | [**listLogConfigurations**](docs/AdminApi.md#listLogConfigurations) | **GET** /admin/loggers | List logging configurations
*AdminApi* | [**listRoleMappings**](docs/AdminApi.md#listRoleMappings) | **GET** /admin/roleMappings | List all role mappings
*AdminApi* | [**removeLogConfiguration**](docs/AdminApi.md#removeLogConfiguration) | **DELETE** /admin/loggers/{logger} | Removes logger configuration
*AdminApi* | [**resetConfigProperty**](docs/AdminApi.md#resetConfigProperty) | **DELETE** /admin/config/properties/{propertyName} | Reset a configuration property
*AdminApi* | [**setLogConfiguration**](docs/AdminApi.md#setLogConfiguration) | **PUT** /admin/loggers/{logger} | Set a logger&#39;s configuration
*AdminApi* | [**updateConfigProperty**](docs/AdminApi.md#updateConfigProperty) | **PUT** /admin/config/properties/{propertyName} | Update a configuration property
*AdminApi* | [**updateGlobalRuleConfig_0**](docs/AdminApi.md#updateGlobalRuleConfig_0) | **PUT** /admin/rules/{rule} | Update global rule configuration
*AdminApi* | [**updateRoleMapping**](docs/AdminApi.md#updateRoleMapping) | **PUT** /admin/roleMappings/{principalId} | Update a role mapping
*ArtifactRulesApi* | [**createArtifactRule**](docs/ArtifactRulesApi.md#createArtifactRule) | **POST** /groups/{groupId}/artifacts/{artifactId}/rules | Create artifact rule
*ArtifactRulesApi* | [**deleteArtifactRule**](docs/ArtifactRulesApi.md#deleteArtifactRule) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ArtifactRulesApi* | [**deleteArtifactRules**](docs/ArtifactRulesApi.md#deleteArtifactRules) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules | Delete artifact rules
*ArtifactRulesApi* | [**getArtifactRuleConfig**](docs/ArtifactRulesApi.md#getArtifactRuleConfig) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ArtifactRulesApi* | [**listArtifactRules**](docs/ArtifactRulesApi.md#listArtifactRules) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules | List artifact rules
*ArtifactRulesApi* | [**testUpdateArtifact**](docs/ArtifactRulesApi.md#testUpdateArtifact) | **PUT** /groups/{groupId}/artifacts/{artifactId}/test | Test update artifact
*ArtifactRulesApi* | [**updateArtifactRuleConfig**](docs/ArtifactRulesApi.md#updateArtifactRuleConfig) | **PUT** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ArtifactTypeApi* | [**listArtifactTypes**](docs/ArtifactTypeApi.md#listArtifactTypes) | **GET** /admin/artifactTypes | List artifact types
*ArtifactsApi* | [**createArtifact**](docs/ArtifactsApi.md#createArtifact) | **POST** /groups/{groupId}/artifacts | Create artifact
*ArtifactsApi* | [**deleteArtifact**](docs/ArtifactsApi.md#deleteArtifact) | **DELETE** /groups/{groupId}/artifacts/{artifactId} | Delete artifact
*ArtifactsApi* | [**deleteArtifactsInGroup**](docs/ArtifactsApi.md#deleteArtifactsInGroup) | **DELETE** /groups/{groupId}/artifacts | Delete artifacts in group
*ArtifactsApi* | [**getContentByGlobalId**](docs/ArtifactsApi.md#getContentByGlobalId) | **GET** /ids/globalIds/{globalId} | Get artifact by global ID
*ArtifactsApi* | [**getContentByHash**](docs/ArtifactsApi.md#getContentByHash) | **GET** /ids/contentHashes/{contentHash}/ | Get artifact content by SHA-256 hash
*ArtifactsApi* | [**getContentById**](docs/ArtifactsApi.md#getContentById) | **GET** /ids/contentIds/{contentId}/ | Get artifact content by ID
*ArtifactsApi* | [**getLatestArtifact**](docs/ArtifactsApi.md#getLatestArtifact) | **GET** /groups/{groupId}/artifacts/{artifactId} | Get latest artifact
*ArtifactsApi* | [**listArtifactsInGroup**](docs/ArtifactsApi.md#listArtifactsInGroup) | **GET** /groups/{groupId}/artifacts | List artifacts in group
*ArtifactsApi* | [**referencesByContentHash**](docs/ArtifactsApi.md#referencesByContentHash) | **GET** /ids/contentHashes/{contentHash}/references | List artifact references by hash
*ArtifactsApi* | [**referencesByContentId**](docs/ArtifactsApi.md#referencesByContentId) | **GET** /ids/contentIds/{contentId}/references | List artifact references by content ID
*ArtifactsApi* | [**referencesByGlobalId**](docs/ArtifactsApi.md#referencesByGlobalId) | **GET** /ids/globalIds/{globalId}/references | List artifact references by global ID
*ArtifactsApi* | [**searchArtifactsByContent_0**](docs/ArtifactsApi.md#searchArtifactsByContent_0) | **POST** /search/artifacts | Search for artifacts by content
*ArtifactsApi* | [**searchArtifacts_0**](docs/ArtifactsApi.md#searchArtifacts_0) | **GET** /search/artifacts | Search for artifacts
*ArtifactsApi* | [**updateArtifact**](docs/ArtifactsApi.md#updateArtifact) | **PUT** /groups/{groupId}/artifacts/{artifactId} | Update artifact
*ArtifactsApi* | [**updateArtifactState**](docs/ArtifactsApi.md#updateArtifactState) | **PUT** /groups/{groupId}/artifacts/{artifactId}/state | Update artifact state
*GlobalRulesApi* | [**createGlobalRule**](docs/GlobalRulesApi.md#createGlobalRule) | **POST** /admin/rules | Create global rule
*GlobalRulesApi* | [**deleteAllGlobalRules**](docs/GlobalRulesApi.md#deleteAllGlobalRules) | **DELETE** /admin/rules | Delete all global rules
*GlobalRulesApi* | [**deleteGlobalRule**](docs/GlobalRulesApi.md#deleteGlobalRule) | **DELETE** /admin/rules/{rule} | Delete global rule
*GlobalRulesApi* | [**getGlobalRuleConfig**](docs/GlobalRulesApi.md#getGlobalRuleConfig) | **GET** /admin/rules/{rule} | Get global rule configuration
*GlobalRulesApi* | [**listGlobalRules**](docs/GlobalRulesApi.md#listGlobalRules) | **GET** /admin/rules | List global rules
*GlobalRulesApi* | [**updateGlobalRuleConfig**](docs/GlobalRulesApi.md#updateGlobalRuleConfig) | **PUT** /admin/rules/{rule} | Update global rule configuration
*GroupsApi* | [**createGroup**](docs/GroupsApi.md#createGroup) | **POST** /groups | Create a new group
*GroupsApi* | [**deleteGroupById**](docs/GroupsApi.md#deleteGroupById) | **DELETE** /groups/{groupId} | Delete a group by the specified ID.
*GroupsApi* | [**getGroupById**](docs/GroupsApi.md#getGroupById) | **GET** /groups/{groupId} | Get a group by the specified ID.
*GroupsApi* | [**listGroups**](docs/GroupsApi.md#listGroups) | **GET** /groups | List groups
*MetadataApi* | [**deleteArtifactVersionMetaData**](docs/MetadataApi.md#deleteArtifactVersionMetaData) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*MetadataApi* | [**getArtifactMetaData**](docs/MetadataApi.md#getArtifactMetaData) | **GET** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact metadata
*MetadataApi* | [**getArtifactOwner**](docs/MetadataApi.md#getArtifactOwner) | **GET** /groups/{groupId}/artifacts/{artifactId}/owner | Get artifact owner
*MetadataApi* | [**getArtifactVersionMetaData**](docs/MetadataApi.md#getArtifactVersionMetaData) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*MetadataApi* | [**getArtifactVersionMetaDataByContent**](docs/MetadataApi.md#getArtifactVersionMetaDataByContent) | **POST** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact version metadata by content
*MetadataApi* | [**updateArtifactMetaData**](docs/MetadataApi.md#updateArtifactMetaData) | **PUT** /groups/{groupId}/artifacts/{artifactId}/meta | Update artifact metadata
*MetadataApi* | [**updateArtifactOwner**](docs/MetadataApi.md#updateArtifactOwner) | **PUT** /groups/{groupId}/artifacts/{artifactId}/owner | Update artifact owner
*MetadataApi* | [**updateArtifactVersionMetaData**](docs/MetadataApi.md#updateArtifactVersionMetaData) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*SearchApi* | [**searchArtifacts**](docs/SearchApi.md#searchArtifacts) | **GET** /search/artifacts | Search for artifacts
*SearchApi* | [**searchArtifactsByContent**](docs/SearchApi.md#searchArtifactsByContent) | **POST** /search/artifacts | Search for artifacts by content
*SystemApi* | [**getResourceLimits**](docs/SystemApi.md#getResourceLimits) | **GET** /system/limits | Get resource limits information
*SystemApi* | [**getSystemInfo**](docs/SystemApi.md#getSystemInfo) | **GET** /system/info | Get system information
*UsersApi* | [**getCurrentUserInfo**](docs/UsersApi.md#getCurrentUserInfo) | **GET** /users/me | Get current user
*VersionsApi* | [**createArtifactVersion**](docs/VersionsApi.md#createArtifactVersion) | **POST** /groups/{groupId}/artifacts/{artifactId}/versions | Create artifact version
*VersionsApi* | [**deleteArtifactVersion**](docs/VersionsApi.md#deleteArtifactVersion) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Delete artifact version
*VersionsApi* | [**getArtifactVersion**](docs/VersionsApi.md#getArtifactVersion) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Get artifact version
*VersionsApi* | [**getArtifactVersionReferences**](docs/VersionsApi.md#getArtifactVersionReferences) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/references | Get artifact version
*VersionsApi* | [**listArtifactVersions**](docs/VersionsApi.md#listArtifactVersions) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions | List artifact versions
*VersionsApi* | [**updateArtifactVersionState**](docs/VersionsApi.md#updateArtifactVersionState) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation for Models

 - [ArtifactContent](docs/ArtifactContent.md)
 - [ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ArtifactOwner](docs/ArtifactOwner.md)
 - [ArtifactReference](docs/ArtifactReference.md)
 - [ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ArtifactState](docs/ArtifactState.md)
 - [ArtifactTypeInfo](docs/ArtifactTypeInfo.md)
 - [ConfigurationProperty](docs/ConfigurationProperty.md)
 - [CreateGroupMetaData](docs/CreateGroupMetaData.md)
 - [DownloadRef](docs/DownloadRef.md)
 - [EditableMetaData](docs/EditableMetaData.md)
 - [Error](docs/Error.md)
 - [GroupMetaData](docs/GroupMetaData.md)
 - [GroupSearchResults](docs/GroupSearchResults.md)
 - [IfExists](docs/IfExists.md)
 - [Limits](docs/Limits.md)
 - [LogConfiguration](docs/LogConfiguration.md)
 - [LogLevel](docs/LogLevel.md)
 - [NamedLogConfiguration](docs/NamedLogConfiguration.md)
 - [RoleMapping](docs/RoleMapping.md)
 - [RoleType](docs/RoleType.md)
 - [Rule](docs/Rule.md)
 - [RuleType](docs/RuleType.md)
 - [RuleViolationCause](docs/RuleViolationCause.md)
 - [RuleViolationError](docs/RuleViolationError.md)
 - [SearchedArtifact](docs/SearchedArtifact.md)
 - [SearchedGroup](docs/SearchedGroup.md)
 - [SearchedVersion](docs/SearchedVersion.md)
 - [SortBy](docs/SortBy.md)
 - [SortOrder](docs/SortOrder.md)
 - [SystemInfo](docs/SystemInfo.md)
 - [UpdateConfigurationProperty](docs/UpdateConfigurationProperty.md)
 - [UpdateRole](docs/UpdateRole.md)
 - [UpdateState](docs/UpdateState.md)
 - [UserInfo](docs/UserInfo.md)
 - [VersionMetaData](docs/VersionMetaData.md)
 - [VersionSearchResults](docs/VersionSearchResults.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization

Endpoints do not require authorization.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author

apicurio@lists.jboss.org

